--- a/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/IncomeTax/Index.cshtml
@@ -56,12 +56,9 @@
                                     <tr>
                                         <th></th>
                                         <th>TicketCode</th>
-                                        <th>LastDate</th>
-                                        <th>LastTotalValue</th>
-                                        <th>LastQuantity</th>
-                                        <th>CurrentDate</th>
-                                        <th>CurrentTotalValue</th>
-                                        <th>CuurentQuantity</th>
+                                        <th>Tickets</th>
+                                        <th>Quantity</th>
+                                        <th>TotalValue</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -130,35 +127,20 @@
                     "defaultContent": "<i>TicketCode</i>",
                 },
                 {
-                    "mData": "LastDate",
+                    "mData": "Tickets",
                     "bSortable": true,
-                    "defaultContent": "<i>LastDate</i>",
+                    "defaultContent": "<i>Tickets</i>",
                 },
                 {
-                    "mData": "LastTotalValue",
+                    "mData": "Quantity",
                     "bSortable": true,
-                    "defaultContent": "<i>LastTotalValue</i>",
+                    "defaultContent": "<i>Quantity</i>",
                 },
                 {
-                    "mData": "LastQuantity",
+                    "mData": "TotalValue",
                     "bSortable": true,
-                    "defaultContent": "<i>LastQuantity</i>",
-                },
-                {
-                    "mData": "CurrentDate",
-                    "bSortable": true,
-                    "defaultContent": "<i>CurrentDate</i>",
-                },
-                {
-                    "mData": "CurrentTotalValue",
-                    "bSortable": true,
-                    "defaultContent": "<i>CurrentTotalValue</i>",
-                },
-                {
-                    "mData": "CurrentQuantity",
-                    "bSortable": true,
-                    "defaultContent": "<i>CurrentQuantity</i>",
-                }
+                    "defaultContent": "<i>TotalValue</i>",
+                }               
             ]
         });
     }
