--- a/src/CtrlMoney.UI.Web/Views/StatusInvest/IncomeTaxReport.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/StatusInvest/IncomeTaxReport.cshtml
@@ -54,7 +54,8 @@
                                     <div class="form-group">
                                         <label>Ano-calendário</label>
                                         <select id="yearsList" class="form-control select2" style="width: 100%;">
-                                            <option selected="selected">2022</option>
+                                            <option selected="selected">2023</option>
+                                            <option>2022</option>
                                             <option>2021</option>
                                             <option>2020</option>
                                             <option>2019</option>
@@ -72,12 +73,9 @@
                                     <tr>
                                         <th></th>
                                         <th>TicketCode</th>
-                                        <th>LastDate</th>
-                                        <th>LastTotalValue</th>
-                                        <th>LastQuantity</th>
-                                        <th>CurrentDate</th>
-                                        <th>CurrentTotalValue</th>
-                                        <th>CuurentQuantity</th>
+                                        <th>Tickets</th>
+                                        <th>Quantity</th>
+                                        <th>TotalValue</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -146,34 +144,19 @@
                     "defaultContent": "<i>TicketCode</i>",
                 },
                 {
-                    "mData": "LastDate",
+                    "mData": "Tickets",
                     "bSortable": true,
-                    "defaultContent": "<i>LastDate</i>",
+                    "defaultContent": "<i>Tickets</i>",
                 },
                 {
-                    "mData": "LastTotalValue",
+                    "mData": "Quantity",
                     "bSortable": true,
-                    "defaultContent": "<i>LastTotalValue</i>",
+                    "defaultContent": "<i>Quantity</i>",
                 },
                 {
-                    "mData": "LastQuantity",
+                    "mData": "TotalValue",
                     "bSortable": true,
-                    "defaultContent": "<i>LastQuantity</i>",
-                },
-                {
-                    "mData": "CurrentDate",
-                    "bSortable": true,
-                    "defaultContent": "<i>CurrentDate</i>",
-                },
-                {
-                    "mData": "CurrentTotalValue",
-                    "bSortable": true,
-                    "defaultContent": "<i>CurrentTotalValue</i>",
-                },
-                {
-                    "mData": "CurrentQuantity",
-                    "bSortable": true,
-                    "defaultContent": "<i>CurrentQuantity</i>",
+                    "defaultContent": "<i>TotalValue</i>",
                 }
             ]
         });
