--- a/src/CtrlMoney.UI.Web/Views/StatusInvest/_PartialViewStocks.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/StatusInvest/_PartialViewStocks.cshtml
@@ -38,7 +38,7 @@
                             <td>
                                 @foreach (var type in item.TransactionsYears)
                                 {
-                                     <div class="d-flex flex-column text-left">
+                                    <div class="d-flex flex-column text-left">
                                         <span><strong class="text-danger mr-1"><i class="fas fa-arrow-down"></i> @type.TransactionType: </strong> @string.Format("{0} - {1}",type.Quantity, type.UnitPrice)</span>
                                         <span class="text-muted"><b>Total: </b> @type.TotalValue</span>
                                     </div>
@@ -47,7 +47,7 @@
                             <td>
                                 @foreach (var earning in item.EarningsReport)
                                 {
-                                  <div class="d-flex flex-column text-left">
+                                    <div class="d-flex flex-column text-left">
                                         <span class="text-muted"><b>@earning.EventType</b> @earning.TotalValue</span>
                                     </div>
                                 }
@@ -104,19 +104,23 @@
         <div class="callout callout-success">
             <div class="row">
                 <div class="col-12 col-sm-6">
+                    <h5>EXERCÍCIO @Model.ExerciseYear - ANO-CALENDÁRIO @Model.CalendarYear</h5>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6">
                     <h5>@Model.TicketCode - @Model.DataOperationInput.Quantity units</h5>
                     <p>@Model.DataOperationInput.Operation</p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <h5>ANO-CALENDÁRIO @Model.CalendarYear</h5>
-                    <p>@Model.DataOperationInput.TotalCalendarYear</p>
+                    <h5>SITUAÇÃO EM @Model.LastYear</h5>
+                    <p>@Model.DataOperationInput.TotalLastYear</p>
                 </div>
                 <div class="col-12 col-sm-3">
-                    <h5>Ano EXERCÍCIO @Model.YearExercise</h5>
-                    <p>@Model.DataOperationInput.TotalYearExercise</p>
+                    <h5>SITUAÇÃO EM @Model.CalendarYear</h5>
+                    <p>@Model.DataOperationInput.TotalCalendarYear</p>
                 </div>
             </div>
-
         </div>
     </div>
     <!-- /.card -->
