Changes for IRRF 2023-2022

--- a/src/CtrlMoney.UI.Web/Views/StatusInvest/_PartialViewStocks.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/StatusInvest/_PartialViewStocks.cshtml
@@ -111,6 +111,7 @@
                 <div class="col-12 col-sm-6">
                     <h5>@Model.TicketCode - @Model.DataOperationInput.Quantity units</h5>
                     <p>@Model.DataOperationInput.Operation</p>
+                    <p>Média: @Model.DataOperationInput.WeightedAverage</p>
                 </div>
                 <div class="col-12 col-sm-3">
                     <h5>SITUAÇÃO EM @Model.LastYear</h5>
