Refactory B3 Import and check Category type external

--- a/src/CtrlMoney.UI.Web/Views/B3/EarningIndex.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/B3/EarningIndex.cshtml
@@ -95,12 +95,12 @@
                     "defaultContent": "<i>Quantity</i>",
                 },
                 {
-                    "mData": "UnitPrice",
+                    "mData": "Price",
                     "bSortable": true,
                     "defaultContent": "<i>UnitPrice</i>",
                 },
                 {
-                    "mData": "NetValue",
+                    "mData": "TotalNetAmount",
                     "bSortable": true,
                     "defaultContent": "<i>NetValue</i>",
                 }
