--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -205,6 +205,30 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                         <p>Upload Movements</p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("EarningIndex", "B3")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Earnings</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("UploadEarning", "B3")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Upload Earning</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("Index", "B3")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Tansactions</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("UploadTransaction", "B3")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Upload Transaction</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item has-treeview">
@@ -217,33 +241,15 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
+                                    <a href="@Url.Action("Index", "MyMoney")" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>MyMoney</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="@Url.Action("IncomeTaxReport", "StatusInvest")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>IncomeTaxReport</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("BrokeragesHistories", "StatusInvest")" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Brokerages Histories</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("UploadTransaction", "StatusInvest")" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Upload Transaction</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("EarningIndex", "StatusInvest")" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Earnings</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="@Url.Action("UploadEarning", "StatusInvest")" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Upload Earnings</p>
+                                        <p>Income Tax Report</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
