Add enum MovimentType
Change category to check in statusinvest
Fix income tax report

--- a/src/CtrlMoney.UI.Web/Views/StatusInvest/IncomeTaxReport.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/StatusInvest/IncomeTaxReport.cshtml
@@ -54,7 +54,8 @@
                                     <div class="form-group">
                                         <label>Ano-calendário</label>
                                         <select id="yearsList" class="form-control select2" style="width: 100%;">
-                                            <option selected="selected">2023</option>
+                                            <option selected="selected">2024</option>
+                                            <option>2023</option>
                                             <option>2022</option>
                                             <option>2021</option>
                                             <option>2020</option>
