--- a/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
+++ b/src/CtrlMoney.UI.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <link href="~/lib/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet" />
     <!-- BootStrap Tree View-->
     @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-treeview/1.2.0/bootstrap-treeview.min.css" />*@
-
+    <link href="~/lib/chart.js/chart.min.css" rel="stylesheet" />
 
     <!-- jQuery -->
     <script src="~/lib/jquery/jquery.min.js"></script>
@@ -300,7 +300,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <!-- Bootstrap 4 -->
     <script type="text/javascript" src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-
     <!-- DataTables -->
     <script type="text/javascript" src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
@@ -314,11 +313,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="~/admin-lte/js/demo.js"></script>
     <!-- Select2 -->
     <script src="~/lib/select2/js/select2.full.min.js"></script>
-
-
+    <script src="~/lib/chart.js/chart.min.js"></script>
     <!-- page script -->
     <script>
-        $(function() {
+        $(function () {
             //Initialize Select2 Elements
             $('.select2').select2()
 
